--- a/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
+++ b/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
@@ -2,62 +2,62 @@
 triple:          'arm64-apple-darwin'
 binary-path:     main
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _initialize_windowing_system, symObjAddr: 0x0, symBinAddr: 0x1000021AC, symSize: 0x164 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _initialize_windowing_system, symObjAddr: 0x0, symBinAddr: 0x1000021A8, symSize: 0x164 }
   - { offsetInCU: 0x3F, offset: 0x3F, size: 0x8, addend: 0x0, symName: _renderer, symObjAddr: 0xB080, symBinAddr: 0x100008110, symSize: 0x0 }
   - { offsetInCU: 0x69, offset: 0x69, size: 0x8, addend: 0x0, symName: _window, symObjAddr: 0xB088, symBinAddr: 0x100008118, symSize: 0x0 }
   - { offsetInCU: 0x93, offset: 0x93, size: 0x8, addend: 0x0, symName: _texture, symObjAddr: 0xB090, symBinAddr: 0x100008120, symSize: 0x0 }
   - { offsetInCU: 0xBD, offset: 0xBD, size: 0x8, addend: 0x0, symName: _color_buffer, symObjAddr: 0xB098, symBinAddr: 0x100008128, symSize: 0x0 }
   - { offsetInCU: 0xE9, offset: 0xE9, size: 0x8, addend: 0x0, symName: _is_running, symObjAddr: 0xB0A0, symBinAddr: 0x100008130, symSize: 0x0 }
-  - { offsetInCU: 0x105, offset: 0x105, size: 0x8, addend: 0x0, symName: _scaling_factor, symObjAddr: 0x1C38, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x105, offset: 0x105, size: 0x8, addend: 0x0, symName: _scaling_factor, symObjAddr: 0x1C40, symBinAddr: 0x100008000, symSize: 0x0 }
   - { offsetInCU: 0x121, offset: 0x121, size: 0x8, addend: 0x0, symName: _previous_frame_time, symObjAddr: 0xB0A4, symBinAddr: 0x100008134, symSize: 0x0 }
   - { offsetInCU: 0x136, offset: 0x136, size: 0x8, addend: 0x0, symName: _camera_position, symObjAddr: 0xB0A8, symBinAddr: 0x100008138, symSize: 0x0 }
   - { offsetInCU: 0x186, offset: 0x186, size: 0x8, addend: 0x0, symName: _t_cnt, symObjAddr: 0xB0B4, symBinAddr: 0x100008144, symSize: 0x0 }
-  - { offsetInCU: 0x19B, offset: 0x19B, size: 0x8, addend: 0x0, symName: _cube_scale, symObjAddr: 0x1C3C, symBinAddr: 0x100008004, symSize: 0x0 }
-  - { offsetInCU: 0x1B0, offset: 0x1B0, size: 0x8, addend: 0x0, symName: _cube_translate, symObjAddr: 0x1C48, symBinAddr: 0x100008010, symSize: 0x0 }
+  - { offsetInCU: 0x19B, offset: 0x19B, size: 0x8, addend: 0x0, symName: _cube_scale, symObjAddr: 0x1C44, symBinAddr: 0x100008004, symSize: 0x0 }
+  - { offsetInCU: 0x1B0, offset: 0x1B0, size: 0x8, addend: 0x0, symName: _cube_translate, symObjAddr: 0x1C50, symBinAddr: 0x100008010, symSize: 0x0 }
   - { offsetInCU: 0x1C5, offset: 0x1C5, size: 0x8, addend: 0x0, symName: _cube_rotation, symObjAddr: 0xB0B8, symBinAddr: 0x100008148, symSize: 0x0 }
-  - { offsetInCU: 0x1DA, offset: 0x1DA, size: 0x8, addend: 0x0, symName: _mesh_vertices, symObjAddr: 0x1C54, symBinAddr: 0x10000801C, symSize: 0x0 }
-  - { offsetInCU: 0x202, offset: 0x202, size: 0x8, addend: 0x0, symName: _mesh_faces, symObjAddr: 0x1CB4, symBinAddr: 0x10000807C, symSize: 0x0 }
+  - { offsetInCU: 0x1DA, offset: 0x1DA, size: 0x8, addend: 0x0, symName: _mesh_vertices, symObjAddr: 0x1C5C, symBinAddr: 0x10000801C, symSize: 0x0 }
+  - { offsetInCU: 0x202, offset: 0x202, size: 0x8, addend: 0x0, symName: _mesh_faces, symObjAddr: 0x1CBC, symBinAddr: 0x10000807C, symSize: 0x0 }
   - { offsetInCU: 0x25E, offset: 0x25E, size: 0x8, addend: 0x0, symName: _window_width, symBinAddr: 0x10000DF18, symSize: 0x0 }
   - { offsetInCU: 0x273, offset: 0x273, size: 0x8, addend: 0x0, symName: _window_height, symBinAddr: 0x10000DF14, symSize: 0x0 }
   - { offsetInCU: 0x288, offset: 0x288, size: 0x8, addend: 0x0, symName: _triangles_to_render, symBinAddr: 0x100008154, symSize: 0x0 }
-  - { offsetInCU: 0x980, offset: 0x980, size: 0x8, addend: 0x0, symName: _initialize_windowing_system, symObjAddr: 0x0, symBinAddr: 0x1000021AC, symSize: 0x164 }
-  - { offsetInCU: 0x9A8, offset: 0x9A8, size: 0x8, addend: 0x0, symName: _clean_up_windowing_system, symObjAddr: 0x164, symBinAddr: 0x100002310, symSize: 0x38 }
-  - { offsetInCU: 0x9BD, offset: 0x9BD, size: 0x8, addend: 0x0, symName: _process_keyboard_input, symObjAddr: 0x19C, symBinAddr: 0x100002348, symSize: 0xB0 }
-  - { offsetInCU: 0x9E1, offset: 0x9E1, size: 0x8, addend: 0x0, symName: _setup_memory_buffer, symObjAddr: 0x24C, symBinAddr: 0x1000023F8, symSize: 0x84 }
-  - { offsetInCU: 0x9F6, offset: 0x9F6, size: 0x8, addend: 0x0, symName: _clear_color_buffer, symObjAddr: 0x2D0, symBinAddr: 0x10000247C, symSize: 0x70 }
-  - { offsetInCU: 0xA36, offset: 0xA36, size: 0x8, addend: 0x0, symName: _draw_triangle, symObjAddr: 0x340, symBinAddr: 0x1000024EC, symSize: 0x7C }
-  - { offsetInCU: 0xAAE, offset: 0xAAE, size: 0x8, addend: 0x0, symName: _draw_line, symObjAddr: 0x3BC, symBinAddr: 0x100002568, symSize: 0x18C }
-  - { offsetInCU: 0xB5E, offset: 0xB5E, size: 0x8, addend: 0x0, symName: _draw_pixel, symObjAddr: 0x548, symBinAddr: 0x1000026F4, symSize: 0xB0 }
-  - { offsetInCU: 0xB9E, offset: 0xB9E, size: 0x8, addend: 0x0, symName: _draw_rectangle, symObjAddr: 0x5F8, symBinAddr: 0x1000027A4, symSize: 0xBC }
-  - { offsetInCU: 0xC32, offset: 0xC32, size: 0x8, addend: 0x0, symName: _perspective_projection_point, symObjAddr: 0x6B4, symBinAddr: 0x100002860, symSize: 0x5C }
-  - { offsetInCU: 0xC69, offset: 0xC69, size: 0x8, addend: 0x0, symName: _project_model, symObjAddr: 0x710, symBinAddr: 0x1000028BC, symSize: 0x658 }
-  - { offsetInCU: 0xE3B, offset: 0xE3B, size: 0x8, addend: 0x0, symName: _mat4_make_scale, symObjAddr: 0xD68, symBinAddr: 0x100002F14, symSize: 0x48 }
-  - { offsetInCU: 0xE93, offset: 0xE93, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_x, symObjAddr: 0xDB0, symBinAddr: 0x100002F5C, symSize: 0x78 }
-  - { offsetInCU: 0xEEB, offset: 0xEEB, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_y, symObjAddr: 0xE28, symBinAddr: 0x100002FD4, symSize: 0x78 }
-  - { offsetInCU: 0xF43, offset: 0xF43, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_z, symObjAddr: 0xEA0, symBinAddr: 0x10000304C, symSize: 0x78 }
-  - { offsetInCU: 0xF9B, offset: 0xF9B, size: 0x8, addend: 0x0, symName: _mat4_make_translate, symObjAddr: 0xF18, symBinAddr: 0x1000030C4, symSize: 0x48 }
-  - { offsetInCU: 0xFF3, offset: 0xFF3, size: 0x8, addend: 0x0, symName: _mat4_identity, symObjAddr: 0xF60, symBinAddr: 0x10000310C, symSize: 0x44 }
-  - { offsetInCU: 0x101E, offset: 0x101E, size: 0x8, addend: 0x0, symName: _mat4_mul_mat4, symObjAddr: 0xFA4, symBinAddr: 0x100003150, symSize: 0x110 }
-  - { offsetInCU: 0x10A3, offset: 0x10A3, size: 0x8, addend: 0x0, symName: _vec4_from_vec3, symObjAddr: 0x10B4, symBinAddr: 0x100003260, symSize: 0x48 }
-  - { offsetInCU: 0x10DC, offset: 0x10DC, size: 0x8, addend: 0x0, symName: _mat4_mul_vec4, symObjAddr: 0x10FC, symBinAddr: 0x1000032A8, symSize: 0x104 }
-  - { offsetInCU: 0x1125, offset: 0x1125, size: 0x8, addend: 0x0, symName: _vec3_from_vec4, symObjAddr: 0x1200, symBinAddr: 0x1000033AC, symSize: 0x40 }
-  - { offsetInCU: 0x115E, offset: 0x115E, size: 0x8, addend: 0x0, symName: _vec3_sub, symObjAddr: 0x1240, symBinAddr: 0x1000033EC, symSize: 0x60 }
-  - { offsetInCU: 0x11A6, offset: 0x11A6, size: 0x8, addend: 0x0, symName: _vec3_cross, symObjAddr: 0x12A0, symBinAddr: 0x10000344C, symSize: 0x84 }
-  - { offsetInCU: 0x11EE, offset: 0x11EE, size: 0x8, addend: 0x0, symName: _vec3_dot, symObjAddr: 0x1324, symBinAddr: 0x1000034D0, symSize: 0x48 }
-  - { offsetInCU: 0x1227, offset: 0x1227, size: 0x8, addend: 0x0, symName: _update_state, symObjAddr: 0x136C, symBinAddr: 0x100003518, symSize: 0x268 }
-  - { offsetInCU: 0x1287, offset: 0x1287, size: 0x8, addend: 0x0, symName: _vec3_rotate_z, symObjAddr: 0x15D4, symBinAddr: 0x100003780, symSize: 0xE4 }
-  - { offsetInCU: 0x12CF, offset: 0x12CF, size: 0x8, addend: 0x0, symName: _vec3_rotate_y, symObjAddr: 0x16B8, symBinAddr: 0x100003864, symSize: 0xE4 }
-  - { offsetInCU: 0x1317, offset: 0x1317, size: 0x8, addend: 0x0, symName: _vec3_rotate_x, symObjAddr: 0x179C, symBinAddr: 0x100003948, symSize: 0xE4 }
-  - { offsetInCU: 0x135F, offset: 0x135F, size: 0x8, addend: 0x0, symName: _vec3_length, symObjAddr: 0x1880, symBinAddr: 0x100003A2C, symSize: 0x48 }
-  - { offsetInCU: 0x1389, offset: 0x1389, size: 0x8, addend: 0x0, symName: _vec3_add, symObjAddr: 0x18C8, symBinAddr: 0x100003A74, symSize: 0x60 }
-  - { offsetInCU: 0x13D1, offset: 0x13D1, size: 0x8, addend: 0x0, symName: _vec3_mul, symObjAddr: 0x1928, symBinAddr: 0x100003AD4, symSize: 0x58 }
-  - { offsetInCU: 0x1419, offset: 0x1419, size: 0x8, addend: 0x0, symName: _vec3_div, symObjAddr: 0x1980, symBinAddr: 0x100003B2C, symSize: 0x58 }
-  - { offsetInCU: 0x1461, offset: 0x1461, size: 0x8, addend: 0x0, symName: _vec2_length, symObjAddr: 0x19D8, symBinAddr: 0x100003B84, symSize: 0x38 }
-  - { offsetInCU: 0x148B, offset: 0x148B, size: 0x8, addend: 0x0, symName: _vec2_add, symObjAddr: 0x1A10, symBinAddr: 0x100003BBC, symSize: 0x44 }
-  - { offsetInCU: 0x14D3, offset: 0x14D3, size: 0x8, addend: 0x0, symName: _vec2_sub, symObjAddr: 0x1A54, symBinAddr: 0x100003C00, symSize: 0x44 }
-  - { offsetInCU: 0x151B, offset: 0x151B, size: 0x8, addend: 0x0, symName: _vec2_mul, symObjAddr: 0x1A98, symBinAddr: 0x100003C44, symSize: 0x40 }
-  - { offsetInCU: 0x1563, offset: 0x1563, size: 0x8, addend: 0x0, symName: _vec2_div, symObjAddr: 0x1AD8, symBinAddr: 0x100003C84, symSize: 0x40 }
-  - { offsetInCU: 0x15AB, offset: 0x15AB, size: 0x8, addend: 0x0, symName: _vec2_dot, symObjAddr: 0x1B18, symBinAddr: 0x100003CC4, symSize: 0x34 }
-  - { offsetInCU: 0x15E4, offset: 0x15E4, size: 0x8, addend: 0x0, symName: _run_render_pipeline, symObjAddr: 0x1B4C, symBinAddr: 0x100003CF8, symSize: 0x78 }
-  - { offsetInCU: 0x15FA, offset: 0x15FA, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1BC4, symBinAddr: 0x100003D70, symSize: 0x5C }
+  - { offsetInCU: 0x980, offset: 0x980, size: 0x8, addend: 0x0, symName: _initialize_windowing_system, symObjAddr: 0x0, symBinAddr: 0x1000021A8, symSize: 0x164 }
+  - { offsetInCU: 0x9A8, offset: 0x9A8, size: 0x8, addend: 0x0, symName: _clean_up_windowing_system, symObjAddr: 0x164, symBinAddr: 0x10000230C, symSize: 0x38 }
+  - { offsetInCU: 0x9BD, offset: 0x9BD, size: 0x8, addend: 0x0, symName: _process_keyboard_input, symObjAddr: 0x19C, symBinAddr: 0x100002344, symSize: 0xB0 }
+  - { offsetInCU: 0x9E1, offset: 0x9E1, size: 0x8, addend: 0x0, symName: _setup_memory_buffer, symObjAddr: 0x24C, symBinAddr: 0x1000023F4, symSize: 0x84 }
+  - { offsetInCU: 0x9F6, offset: 0x9F6, size: 0x8, addend: 0x0, symName: _clear_color_buffer, symObjAddr: 0x2D0, symBinAddr: 0x100002478, symSize: 0x70 }
+  - { offsetInCU: 0xA36, offset: 0xA36, size: 0x8, addend: 0x0, symName: _draw_triangle, symObjAddr: 0x340, symBinAddr: 0x1000024E8, symSize: 0x7C }
+  - { offsetInCU: 0xAAE, offset: 0xAAE, size: 0x8, addend: 0x0, symName: _draw_line, symObjAddr: 0x3BC, symBinAddr: 0x100002564, symSize: 0x18C }
+  - { offsetInCU: 0xB5E, offset: 0xB5E, size: 0x8, addend: 0x0, symName: _draw_pixel, symObjAddr: 0x548, symBinAddr: 0x1000026F0, symSize: 0xB0 }
+  - { offsetInCU: 0xB9E, offset: 0xB9E, size: 0x8, addend: 0x0, symName: _draw_rectangle, symObjAddr: 0x5F8, symBinAddr: 0x1000027A0, symSize: 0xBC }
+  - { offsetInCU: 0xC32, offset: 0xC32, size: 0x8, addend: 0x0, symName: _perspective_projection_point, symObjAddr: 0x6B4, symBinAddr: 0x10000285C, symSize: 0x5C }
+  - { offsetInCU: 0xC68, offset: 0xC68, size: 0x8, addend: 0x0, symName: _project_model, symObjAddr: 0x710, symBinAddr: 0x1000028B8, symSize: 0x768 }
+  - { offsetInCU: 0xE70, offset: 0xE70, size: 0x8, addend: 0x0, symName: _mat4_make_scale, symObjAddr: 0xE78, symBinAddr: 0x100003020, symSize: 0x48 }
+  - { offsetInCU: 0xEC8, offset: 0xEC8, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_x, symObjAddr: 0xEC0, symBinAddr: 0x100003068, symSize: 0x78 }
+  - { offsetInCU: 0xF20, offset: 0xF20, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_y, symObjAddr: 0xF38, symBinAddr: 0x1000030E0, symSize: 0x78 }
+  - { offsetInCU: 0xF78, offset: 0xF78, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_z, symObjAddr: 0xFB0, symBinAddr: 0x100003158, symSize: 0x78 }
+  - { offsetInCU: 0xFD0, offset: 0xFD0, size: 0x8, addend: 0x0, symName: _mat4_make_translate, symObjAddr: 0x1028, symBinAddr: 0x1000031D0, symSize: 0x48 }
+  - { offsetInCU: 0x1028, offset: 0x1028, size: 0x8, addend: 0x0, symName: _mat4_identity, symObjAddr: 0x1070, symBinAddr: 0x100003218, symSize: 0x44 }
+  - { offsetInCU: 0x1053, offset: 0x1053, size: 0x8, addend: 0x0, symName: _mat4_mul_mat4, symObjAddr: 0x10B4, symBinAddr: 0x10000325C, symSize: 0x110 }
+  - { offsetInCU: 0x10D8, offset: 0x10D8, size: 0x8, addend: 0x0, symName: _vec4_from_vec3, symObjAddr: 0x11C4, symBinAddr: 0x10000336C, symSize: 0x48 }
+  - { offsetInCU: 0x1111, offset: 0x1111, size: 0x8, addend: 0x0, symName: _mat4_mul_vec4, symObjAddr: 0x120C, symBinAddr: 0x1000033B4, symSize: 0x104 }
+  - { offsetInCU: 0x115A, offset: 0x115A, size: 0x8, addend: 0x0, symName: _vec3_from_vec4, symObjAddr: 0x1310, symBinAddr: 0x1000034B8, symSize: 0x40 }
+  - { offsetInCU: 0x1193, offset: 0x1193, size: 0x8, addend: 0x0, symName: _vec3_sub, symObjAddr: 0x1350, symBinAddr: 0x1000034F8, symSize: 0x60 }
+  - { offsetInCU: 0x11DB, offset: 0x11DB, size: 0x8, addend: 0x0, symName: _vec3_cross, symObjAddr: 0x13B0, symBinAddr: 0x100003558, symSize: 0x84 }
+  - { offsetInCU: 0x1223, offset: 0x1223, size: 0x8, addend: 0x0, symName: _vec3_dot, symObjAddr: 0x1434, symBinAddr: 0x1000035DC, symSize: 0x48 }
+  - { offsetInCU: 0x125C, offset: 0x125C, size: 0x8, addend: 0x0, symName: _vec3_rotate_z, symObjAddr: 0x147C, symBinAddr: 0x100003624, symSize: 0xE4 }
+  - { offsetInCU: 0x12A4, offset: 0x12A4, size: 0x8, addend: 0x0, symName: _vec3_rotate_y, symObjAddr: 0x1560, symBinAddr: 0x100003708, symSize: 0xE4 }
+  - { offsetInCU: 0x12EC, offset: 0x12EC, size: 0x8, addend: 0x0, symName: _vec3_rotate_x, symObjAddr: 0x1644, symBinAddr: 0x1000037EC, symSize: 0xE4 }
+  - { offsetInCU: 0x1334, offset: 0x1334, size: 0x8, addend: 0x0, symName: _vec3_length, symObjAddr: 0x1728, symBinAddr: 0x1000038D0, symSize: 0x48 }
+  - { offsetInCU: 0x135E, offset: 0x135E, size: 0x8, addend: 0x0, symName: _vec3_add, symObjAddr: 0x1770, symBinAddr: 0x100003918, symSize: 0x60 }
+  - { offsetInCU: 0x13A6, offset: 0x13A6, size: 0x8, addend: 0x0, symName: _vec3_mul, symObjAddr: 0x17D0, symBinAddr: 0x100003978, symSize: 0x58 }
+  - { offsetInCU: 0x13EE, offset: 0x13EE, size: 0x8, addend: 0x0, symName: _vec3_div, symObjAddr: 0x1828, symBinAddr: 0x1000039D0, symSize: 0x58 }
+  - { offsetInCU: 0x1436, offset: 0x1436, size: 0x8, addend: 0x0, symName: _vec2_length, symObjAddr: 0x1880, symBinAddr: 0x100003A28, symSize: 0x38 }
+  - { offsetInCU: 0x1460, offset: 0x1460, size: 0x8, addend: 0x0, symName: _vec2_add, symObjAddr: 0x18B8, symBinAddr: 0x100003A60, symSize: 0x44 }
+  - { offsetInCU: 0x14A8, offset: 0x14A8, size: 0x8, addend: 0x0, symName: _vec2_sub, symObjAddr: 0x18FC, symBinAddr: 0x100003AA4, symSize: 0x44 }
+  - { offsetInCU: 0x14F0, offset: 0x14F0, size: 0x8, addend: 0x0, symName: _vec2_mul, symObjAddr: 0x1940, symBinAddr: 0x100003AE8, symSize: 0x40 }
+  - { offsetInCU: 0x1538, offset: 0x1538, size: 0x8, addend: 0x0, symName: _vec2_div, symObjAddr: 0x1980, symBinAddr: 0x100003B28, symSize: 0x40 }
+  - { offsetInCU: 0x1580, offset: 0x1580, size: 0x8, addend: 0x0, symName: _vec2_dot, symObjAddr: 0x19C0, symBinAddr: 0x100003B68, symSize: 0x34 }
+  - { offsetInCU: 0x15B9, offset: 0x15B9, size: 0x8, addend: 0x0, symName: _update_state, symObjAddr: 0x19F4, symBinAddr: 0x100003B9C, symSize: 0x15C }
+  - { offsetInCU: 0x15DF, offset: 0x15DF, size: 0x8, addend: 0x0, symName: _run_render_pipeline, symObjAddr: 0x1B50, symBinAddr: 0x100003CF8, symSize: 0x78 }
+  - { offsetInCU: 0x15F5, offset: 0x15F5, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1BC8, symBinAddr: 0x100003D70, symSize: 0x5C }
 ...
